[package]
name = "unpaired"
version = "0.2.0"
edition = "2024"
description = "Terminal utility for finding unique (non-duplicated) files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/allexkap/unpaired"
keywords = ["cli", "tui", "filesystem", "unique", "files"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
enum-as-inner = "0.7.0"
indextree = "4.7.4"
indicatif = "0.18.4"
nix = { version = "0.31.1", features = ["ioctl"] }
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = "0.30.0"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
